--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+.vscode
+
 src/conf.ini
 *.log
+bin/
+pkg/
+*.code-workspace
